--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<h1>Kjrsten-Mplscollege's main index page</h1>
+<h1>This is the home page of Abdurrahman main index page</h1>
+
+<a href=/mctc-html2/">LINK TO mctc-html2</a>
