--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>This is the home page of Abdurrahman main index page</h1>
 
-<a href=/mctc-html2/">LINK TO mctc-html2</a>
+<a <a href="https://abdurrahman-coding.github.io/mctc-html2/">LINK TO mctc-html2</a>
